--- a/image-compressor.html
+++ b/image-compressor.html
@@ -964,8 +964,8 @@
                 <div class="footer-section">
                     <h3 class="category-header">Quick Links</h3>
                     <ul class="footer-links">
-                        <li><a href="https://lollypopdf.com#home" data-key="homeLink">Home</a></li>
-                        <li><a href="tools.html" data-key="allTools">All Tools</a></li>
+                        <li><a href="https://lollypopdf.github.io/LollyPoPdf#home" data-key="homeLink">Home</a></li>
+                        <li><a href="https://lollypopdf.github.io/LollyPoPdf#tools.html" data-key="allTools">All Tools</a></li>
                         <li><a href="faq.html" data-key="faq">FAQ</a></li>
                         <li><a href="contact.html" data-key="contactLink">Contact</a></li>
                         <li><a href="privacy-policy.html" data-key="privacyPolicy">Privacy Policy</a></li>
