--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@
                     <div class="tool-icon">💧</div>
                     <h4 class="tool-title" data-translate="imageWatermarker">Image Watermarker</h4>
                     <p class="tool-desc" data-translate="imageWatermarkerDesc">Add watermarks to protect your images</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="image-watermarker.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="imageBlurTool" data-tool-name="Image Blur Tool" data-search-keywords="image blur tool, blur image, blur effect">
                     <div class="tool-icon">👁️</div>
