--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
                     <div class="tool-icon">🔤</div>
                     <h4 class="tool-title" data-translate="imageToText">Image to Text (OCR)</h4>
                     <p class="tool-desc" data-translate="imageToTextDesc">Extract text from images using OCR technology</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="image to-text.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="imageRotator" data-tool-name="Image Rotator/Flipper" data-search-keywords="image rotator, rotate image, flip image">
                     <div class="tool-icon">🔄</div>
