Update image to text.html

--- a/image to text.html
+++ b/image to text.html
@@ -1048,7 +1048,7 @@
                 <h4 data-i18n="footer.quicklinks">Quick Links</h4>
                 <ul class="footer-links">
                     <li><a href="https://lollypopdf.github.io/LollyPoPdf#home" data-i18n="nav.home">Home</a></li>
-                    <li><a href="tools.html" data-i18n="footer.links.tools">All Tools</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdf#tools" data-i18n="footer.links.tools">All Tools</a></li>
                     <li><a href="faq.html" data-i18n="footer.links.faq">FAQ</a></li>
                     <li><a href="contact.html" data-i18n="footer.links.contact">Contact</a></li>
                     <li><a href="privacy-policy.html" data-i18n="footer.links.privacy">Privacy Policy</a></li>
