--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@
                     <div class="tool-icon">🔄</div>
                     <h4 class="tool-title" data-translate="imageRotator">Image Rotator/Flipper</h4>
                     <p class="tool-desc" data-translate="imageRotatorDesc">Rotate or flip images in any direction</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="image rotator flipper.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="imageWatermarker" data-tool-name="Image Watermarker" data-search-keywords="image watermarker, add watermark, protect image">
                     <div class="tool-icon">💧</div>
