--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
                     <div class="tool-icon">👁️</div>
                     <h4 class="tool-title" data-translate="imageBlurTool">Image Blur Tool</h4>
                     <p class="tool-desc" data-translate="imageBlurToolDesc">Blur specific areas of your images</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="image-blur.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
             </div>
         </div>
