--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
                     <div class="tool-icon">🔠</div>
                     <h4 class="tool-title" data-translate="textCaseConverter">Text Case Converter</h4>
                     <p class="tool-desc" data-translate="textCaseConverterDesc">Convert text between different cases</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="text case converter.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="wordCounter" data-tool-name="Word & Character Counter" data-search-keywords="word counter, character counter, count words">
                     <div class="tool-icon">🔢</div>
