--- a/index.html
+++ b/index.html
@@ -981,7 +981,7 @@
                     <div class="tool-icon">🔢</div>
                     <h4 class="tool-title" data-translate="wordCounter">Word & Character Counter</h4>
                     <p class="tool-desc" data-translate="wordCounterDesc">Count words and characters in your text</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="word character counter.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="removeDuplicateLines" data-tool-name="Remove Duplicate Lines" data-search-keywords="remove duplicate lines, delete duplicates, clean text">
                     <div class="tool-icon">❌</div>
