--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
                     <div class="tool-icon">❌</div>
                     <h4 class="tool-title" data-translate="removeDuplicateLines">Remove Duplicate Lines</h4>
                     <p class="tool-desc" data-translate="removeDuplicateLinesDesc">Remove duplicate lines from your text</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="remove duplicate lines.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="textSorter" data-tool-name="Text Sorter" data-search-keywords="text sorter, sort text, alphabetize">
                     <div class="tool-icon">🔤</div>
