--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
                     <div class="tool-icon">🔤</div>
                     <h4 class="tool-title" data-translate="textSorter">Text Sorter</h4>
                     <p class="tool-desc" data-translate="textSorterDesc">Sort text lines alphabetically</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="text sorter.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="textReverser" data-tool-name="Text Reverser" data-search-keywords="text reverser, reverse text, backwards text">
                     <div class="tool-icon">🔄</div>
