--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
                     <div class="tool-icon">🔄</div>
                     <h4 class="tool-title" data-translate="textReverser">Text Reverser</h4>
                     <p class="tool-desc" data-translate="textReverserDesc">Reverse the order of text characters</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="text-reverser.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="textEncryptor" data-tool-name="Text Encryptor/Decryptor" data-search-keywords="text encryptor, text decryptor, encrypt text">
                     <div class="tool-icon">🔐</div>
