--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
                     <div class="tool-icon">🔐</div>
                     <h4 class="tool-title" data-translate="textEncryptor">Text Encryptor/Decryptor</h4>
                     <p class="tool-desc" data-translate="textEncryptorDesc">Encrypt and decrypt text with secure algorithms</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="text encryptor-decryptor.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
             </div>
         </div>
