--- a/index.html
+++ b/index.html
@@ -1027,7 +1027,7 @@
                     <div class="tool-icon">🎵</div>
                     <h4 class="tool-title" data-translate="audioConverter">Audio Converter</h4>
                     <p class="tool-desc" data-translate="audioConverterDesc">Convert audio files to WAV and other formats</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="audio-converter.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="audioTrimmer" data-tool-name="Audio Trimmer" data-search-keywords="audio trimmer, trim audio, cut audio">
                     <div class="tool-icon">✂️</div>
