--- a/index.html
+++ b/index.html
@@ -1021,7 +1021,7 @@
                     <div class="tool-icon">🎥</div>
                     <h4 class="tool-title" data-translate="videoConverter">Video Converter</h4>
                     <p class="tool-desc" data-translate="videoConverterDesc">Convert videos between different formats</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="video-converter.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="audioConverter" data-tool-name="Audio Converter" data-search-keywords="audio converter, convert audio, audio format">
                     <div class="tool-icon">🎵</div>
