--- a/index.html
+++ b/index.html
@@ -1033,7 +1033,7 @@
                     <div class="tool-icon">✂️</div>
                     <h4 class="tool-title" data-translate="audioTrimmer">Audio Trimmer</h4>
                     <p class="tool-desc" data-translate="audioTrimmerDesc">Trim audio files to desired length</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="audio-trimmer.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="textToSpeech" data-tool-name="Text to Speech" data-search-keywords="text to speech, tts, speech synthesis">
                     <div class="tool-icon">🗣️</div>
