--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@
                     <div class="tool-icon">🎤</div>
                     <h4 class="tool-title" data-translate="speechToText">Speech to Text</h4>
                     <p class="tool-desc" data-translate="speechToTextDesc">Convert speech to text with high accuracy</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="speech to text.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="timerStopwatch" data-tool-name="Timer/Stopwatch" data-search-keywords="timer, stopwatch, countdown">
                     <div class="tool-icon">⏱️</div>
