--- a/index.html
+++ b/index.html
@@ -1051,7 +1051,7 @@
                     <div class="tool-icon">⏱️</div>
                     <h4 class="tool-title" data-translate="timerStopwatch">Timer/Stopwatch</h4>
                     <p class="tool-desc" data-translate="timerStopwatchDesc">Use timer and stopwatch for time management</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="timer stopwatch.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
             </div>
         </div>
