--- a/index.html
+++ b/index.html
@@ -1039,7 +1039,7 @@
                     <div class="tool-icon">🗣️</div>
                     <h4 class="tool-title" data-translate="textToSpeech">Text to Speech</h4>
                     <p class="tool-desc" data-translate="textToSpeechDesc">Convert text to natural sounding speech</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="text to speech.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="speechToText" data-tool-name="Speech to Text" data-search-keywords="speech to text, stt, voice recognition">
                     <div class="tool-icon">🎤</div>
