--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@
                     <div class="tool-icon">⚡</div>
                     <h4 class="tool-title" data-translate="htmlMinifier">HTML/CSS/JS Minifier</h4>
                     <p class="tool-desc" data-translate="htmlMinifierDesc">Minify your code for better performance</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="html css js minifier.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="jsonFormatter" data-tool-name="JSON Formatter & Validator" data-search-keywords="json formatter, json validator, format json">
                     <div class="tool-icon">📋</div>
