--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@
                     <div class="tool-icon">📋</div>
                     <h4 class="tool-title" data-translate="jsonFormatter">JSON Formatter & Validator</h4>
                     <p class="tool-desc" data-translate="jsonFormatterDesc">Format and validate JSON data</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="json formatter validator.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="base64Encoder" data-tool-name="Base64 Encoder/Decoder" data-search-keywords="base64 encoder, base64 decoder, encode base64">
                     <div class="tool-icon">🔒</div>
