--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@
                     <div class="tool-icon">🔒</div>
                     <h4 class="tool-title" data-translate="base64Encoder">Base64 Encoder/Decoder</h4>
                     <p class="tool-desc" data-translate="base64EncoderDesc">Encode and decode Base64 data</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="base64 encoder decoder.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="urlEncoder" data-tool-name="URL Encoder/Decoder" data-search-keywords="url encoder, url decoder, encode url">
                     <div class="tool-icon">🔗</div>
