--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@
                     <div class="tool-icon">🔗</div>
                     <h4 class="tool-title" data-translate="urlEncoder">URL Encoder/Decoder</h4>
                     <p class="tool-desc" data-translate="urlEncoderDesc">Encode and decode URL strings</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="url encoder decoder.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="colorPicker" data-tool-name="Color Picker & Converter" data-search-keywords="color picker, color converter, hex rgb">
                     <div class="tool-icon">🎨</div>
