--- a/index.html
+++ b/index.html
@@ -1091,7 +1091,7 @@
                     <div class="tool-icon">🎨</div>
                     <h4 class="tool-title" data-translate="colorPicker">Color Picker & Converter</h4>
                     <p class="tool-desc" data-translate="colorPickerDesc">Pick colors and convert between formats</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="color picker converter.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="regexTester" data-tool-name="Regex Tester" data-search-keywords="regex tester, regular expression, test regex">
                     <div class="tool-icon">🔍</div>
