--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
                     <div class="tool-icon">🔍</div>
                     <h4 class="tool-title" data-translate="regexTester">Regex Tester</h4>
                     <p class="tool-desc" data-translate="regexTesterDesc">Test and debug regular expressions</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="regex tester.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
             </div>
         </div>
