--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@
                     <div class="tool-icon">🧮</div>
                     <h4 class="tool-title" data-translate="scientificCalculator">Scientific Calculator</h4>
                     <p class="tool-desc" data-translate="scientificCalculatorDesc">Advanced calculator for complex calculations</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="scientific calculator.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="ageCalculator" data-tool-name="Age Calculator" data-search-keywords="age calculator, calculate age">
                     <div class="tool-icon">🎂</div>
