--- a/index.html
+++ b/index.html
@@ -1125,7 +1125,7 @@
                     <div class="tool-icon">⚖️</div>
                     <h4 class="tool-title" data-translate="bmiCalculator">BMI Calculator</h4>
                     <p class="tool-desc" data-translate="bmiCalculatorDesc">Calculate Body Mass Index</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="bmi-calculator.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="loanEmiCalculator" data-tool-name="Loan EMI Calculator" data-search-keywords="loan emi calculator, equated monthly installment">
                     <div class="tool-icon">💰</div>
