--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@
                     <div class="tool-icon">🎂</div>
                     <h4 class="tool-title" data-translate="ageCalculator">Age Calculator</h4>
                     <p class="tool-desc" data-translate="ageCalculatorDesc">Calculate age from birth date</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="age-calculator.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="bmiCalculator" data-tool-name="BMI Calculator" data-search-keywords="bmi calculator, body mass index">
                     <div class="tool-icon">⚖️</div>
