--- a/index.html
+++ b/index.html
@@ -1131,7 +1131,7 @@
                     <div class="tool-icon">💰</div>
                     <h4 class="tool-title" data-translate="loanEmiCalculator">Loan EMI Calculator</h4>
                     <p class="tool-desc" data-translate="loanEmiCalculatorDesc">Calculate Equated Monthly Installments</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="loan emi calculator.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="gstCalculator" data-tool-name="GST Calculator" data-search-keywords="gst calculator, goods and services tax">
                     <div class="tool-icon">📊</div>
