--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@
                     <div class="tool-icon">📊</div>
                     <h4 class="tool-title" data-translate="gstCalculator">GST Calculator</h4>
                     <p class="tool-desc" data-translate="gstCalculatorDesc">Calculate Goods and Services Tax</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="gst calculator.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="currencyConverter" data-tool-name="Currency Converter" data-search-keywords="currency converter, convert currency">
                     <div class="tool-icon">💱</div>
