--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@
                     <div class="tool-icon">💱</div>
                     <h4 class="tool-title" data-translate="currencyConverter">Currency Converter</h4>
                     <p class="tool-desc" data-translate="currencyConverterDesc">Convert between different currencies</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="currency converter.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
             </div>
         </div>
