--- a/index.html
+++ b/index.html
@@ -1159,7 +1159,7 @@
                     <div class="tool-icon">📱</div>
                     <h4 class="tool-title" data-translate="qrCodeGenerator">QR Code Generator & Scanner</h4>
                     <p class="tool-desc" data-translate="qrCodeGeneratorDesc">Create and scan QR codes</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="qr code generator scanner.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="barcodeGenerator" data-tool-name="Barcode Generator" data-search-keywords="barcode generator, create barcode">
                     <div class="tool-icon">📊</div>
