--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,7 @@
                     <div class="tool-icon">📊</div>
                     <h4 class="tool-title" data-translate="barcodeGenerator">Barcode Generator</h4>
                     <p class="tool-desc" data-translate="barcodeGeneratorDesc">Generate barcodes for products</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="barcode-generator.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="uuidGenerator" data-tool-name="UUID Generator" data-search-keywords="uuid generator, unique identifier">
                     <div class="tool-icon">🆔</div>
