--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,7 @@
                     <div class="tool-icon">🆔</div>
                     <h4 class="tool-title" data-translate="uuidGenerator">UUID Generator</h4>
                     <p class="tool-desc" data-translate="uuidGeneratorDesc">Generate unique identifiers</p>
-                    <a href="uuid-generator.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="uuid generator.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="unitConverter" data-tool-name="Unit Converter" data-search-keywords="unit converter, convert units">
                     <div class="tool-icon">📏</div>
