--- a/index.html
+++ b/index.html
@@ -1177,7 +1177,7 @@
                     <div class="tool-icon">📏</div>
                     <h4 class="tool-title" data-translate="unitConverter">Unit Converter</h4>
                     <p class="tool-desc" data-translate="unitConverterDesc">Convert between different units of measurement</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="unit converter.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="timeZoneConverter" data-tool-name="Time Zone Converter" data-search-keywords="time zone converter, convert time zone">
                     <div class="tool-icon">🌐</div>
