--- a/index.html
+++ b/index.html
@@ -1183,7 +1183,7 @@
                     <div class="tool-icon">🌐</div>
                     <h4 class="tool-title" data-translate="timeZoneConverter">Time Zone Converter</h4>
                     <p class="tool-desc" data-translate="timeZoneConverterDesc">Convert time between different time zones</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="time zone converter.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="emailGenerator" data-tool-name="Email Generator" data-search-keywords="email generator, temporary email">
                     <div class="tool-icon">📧</div>
