--- a/index.html
+++ b/index.html
@@ -1189,7 +1189,7 @@
                     <div class="tool-icon">📧</div>
                     <h4 class="tool-title" data-translate="emailGenerator">Email Generator</h4>
                     <p class="tool-desc" data-translate="emailGeneratorDesc">Generate temporary email addresses</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="email generator.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="randomGenerator" data-tool-name="Random Number/Password Generator" data-search-keywords="random number generator, password generator">
                     <div class="tool-icon">🔑</div>
