--- a/index.html
+++ b/index.html
@@ -1195,7 +1195,7 @@
                     <div class="tool-icon">🔑</div>
                     <h4 class="tool-title" data-translate="randomGenerator">Random Number/Password Generator</h4>
                     <p class="tool-desc" data-translate="randomGeneratorDesc">Generate secure random numbers and passwords</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="random number password generator.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
             </div>
         </div>
