--- a/index.html
+++ b/index.html
@@ -1211,7 +1211,7 @@
                     <div class="tool-icon">🎯</div>
                     <h4 class="tool-title" data-translate="colorPickerImage">Color Picker from Image</h4>
                     <p class="tool-desc" data-translate="colorPickerImageDesc">Extract colors from any image</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="color picker from image.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="hexToRgb" data-tool-name="HEX to RGB Converter" data-search-keywords="hex to rgb, convert hex to rgb">
                     <div class="tool-icon">🔄</div>
