--- a/index.html
+++ b/index.html
@@ -1217,7 +1217,7 @@
                     <div class="tool-icon">🔄</div>
                     <h4 class="tool-title" data-translate="hexToRgb">HEX to RGB Converter</h4>
                     <p class="tool-desc" data-translate="hexToRgbDesc">Convert HEX color codes to RGB values</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="hex to rgb converter.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="gradientGenerator" data-tool-name="Gradient Generator" data-search-keywords="gradient generator, create gradient">
                     <div class="tool-icon">🌈</div>
