--- a/index.html
+++ b/index.html
@@ -1223,7 +1223,7 @@
                     <div class="tool-icon">🌈</div>
                     <h4 class="tool-title" data-translate="gradientGenerator">Gradient Generator</h4>
                     <p class="tool-desc" data-translate="gradientGeneratorDesc">Create beautiful color gradients</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="gradient generator.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="contrastChecker" data-tool-name="Contrast Checker" data-search-keywords="contrast checker, color contrast">
                     <div class="tool-icon">⚫⚪</div>
