--- a/index.html
+++ b/index.html
@@ -1229,7 +1229,7 @@
                     <div class="tool-icon">⚫⚪</div>
                     <h4 class="tool-title" data-translate="contrastChecker">Contrast Checker</h4>
                     <p class="tool-desc" data-translate="contrastCheckerDesc">Check color contrast for accessibility</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="contrast checker.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="paletteGenerator" data-tool-name="Palette Generator" data-search-keywords="palette generator, color palette">
                     <div class="tool-icon">🎨</div>
