--- a/index.html
+++ b/index.html
@@ -1235,7 +1235,7 @@
                     <div class="tool-icon">🎨</div>
                     <h4 class="tool-title" data-translate="paletteGenerator">Palette Generator</h4>
                     <p class="tool-desc" data-translate="paletteGeneratorDesc">Generate harmonious color palettes</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="palette generator.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="colorBlindnessSimulator" data-tool-name="Color Blindness Simulator" data-search-keywords="color blindness simulator, color vision deficiency">
                     <div class="tool-icon">👁️</div>
