--- a/index.html
+++ b/index.html
@@ -1241,7 +1241,7 @@
                     <div class="tool-icon">👁️</div>
                     <h4 class="tool-title" data-translate="colorBlindnessSimulator">Color Blindness Simulator</h4>
                     <p class="tool-desc" data-translate="colorBlindnessSimulatorDesc">Simulate how colors appear to colorblind users</p>
-                    <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="color blindness simulator.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
             </div>
         </div>
