--- a/contact.html
+++ b/contact.html
@@ -456,7 +456,7 @@
         .language-switcher {
             position: fixed;
             bottom: 10px;
-            right: 20px;
+            right: 10px;
             z-index: 1000;
         }
 
@@ -464,7 +464,7 @@
             display: flex;
             align-items: center;
             gap: 8px;
-            padding: 10px 10px;
+            padding: 5px 5px;
             background-color: var(--accent-color);
             color: white;
             border: none;
@@ -495,7 +495,7 @@
         }
 
         .language-option {
-            padding: 8px 10px;
+            padding: 8px 12px;
             border-radius: 6px;
             text-align: center;
             cursor: pointer;
@@ -597,10 +597,10 @@
             
             <nav id="main-nav">
                 <ul>
-                    <li><a href="https://lollypopdf.com#home" id="nav-home">Home</a></li>
-                    <li><a href="#about" data-translate="about">About Us</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdf#home" id="nav-home">Home</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdf#about" id="nav-about">About Us</a></li>
                     <li><a href="https://lollypopdf.github.io/LollyPoPdf#tools" id="nav-tools">Tools</a></li>
-                    <li><a href="contact.html" data-translate="contact">Contact</a></li>
+                    <li><a href="contact.html" id="nav-contact">Contact</a></li>
                 </ul>
             </nav>
             
