--- a/index.html
+++ b/index.html
@@ -1134,7 +1134,7 @@
                     <a href="loan emi calculator.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="gstCalculator" data-tool-name="GST Calculator" data-search-keywords="gst calculator, goods and services tax">
-                    <div class="tool-icon">📊</div>
+                    <div class="tool-icon">💳</div>
                     <h4 class="tool-title" data-translate="gstCalculator">GST Calculator</h4>
                     <p class="tool-desc" data-translate="gstCalculatorDesc">Calculate Goods and Services Tax</p>
                     <a href="gst calculator.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
