--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
                         <div class="tool-icon">🔗</div>
                         <h4 class="tool-title" data-translate="pdfMergerSplitter">PDF Merger & Splitter</h4>
                         <p class="tool-desc" data-translate="pdfMergerSplitterDesc">Combine or split PDF files easily</p>
-                        <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                        <a href="pdf merger splitter.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="documentConverter" data-tool-name="Document Converter" data-search-keywords="document converter, convert documents, file converter">
                         <div class="tool-icon">🔄</div>
