--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
                         <div class="tool-icon">🎛️</div>
                         <h4 class="tool-title" data-translate="pdfCompressor">PDF Compressor</h4>
                         <p class="tool-desc" data-translate="pdfCompressorDesc">Reduce PDF file size while maintaining quality</p>
-                        <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                        <a href="pdf-compressor.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="pdfMergerSplitter" data-tool-name="PDF Merger & Splitter" data-search-keywords="pdf merger, pdf splitter, combine pdf, split pdf">
                         <div class="tool-icon">🔗</div>
