--- a/index.html
+++ b/index.html
@@ -894,13 +894,13 @@
                         <div class="tool-icon">🖼️</div>
                         <h4 class="tool-title" data-translate="pdfToJpg">PDF to JPG</h4>
                         <p class="tool-desc" data-translate="pdfToJpgDesc">Convert PDF pages to JPG images</p>
-                        <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                        <a href="pdf to jpg.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="jpgToPdf" data-tool-name="JPG to PDF" data-search-keywords="jpg to pdf, convert jpg to pdf">
                         <div class="tool-icon">📄</div>
                         <h4 class="tool-title" data-translate="jpgToPdf">JPG to PDF</h4>
                         <p class="tool-desc" data-translate="jpgToPdfDesc">Convert JPG images to PDF documents</p>
-                        <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                        <a href="jpg to pdf.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                 </div>
             </div>
