Update pdf to jpg.html

--- a/pdf to jpg.html
+++ b/pdf to jpg.html
@@ -1965,7 +1965,7 @@
                 "footer.links.privacy": "プライバシーポリシー",
                 "footer.links.disclaimer": "免責事項",
                 "footer.links.terms": "利用規約",
-                "footer.copyright": "© 2025 LollyPoPDF. All rights reserved."
+                "footer.copyright": "© 2025 LollyPoPDF. 無断転載を禁じます."
             },
             ru: {
                 "nav.home": "Главная",
@@ -2077,7 +2077,7 @@
                 "footer.links.privacy": "개인정보 보호정책",
                 "footer.links.disclaimer": "면책 조항",
                 "footer.links.terms": "이용약관",
-                "footer.copyright": "© 2025 LollyPoPDF. All rights reserved."
+                "footer.copyright": "© 2025 LollyPoPDF. 모든 권리 보유."
             },
             "zh-CN": {
                 "nav.home": "首页",
