--- a/index.html
+++ b/index.html
@@ -855,49 +855,49 @@
                         <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="pdfToWord" data-tool-name="PDF to Word" data-search-keywords="pdf to word, convert pdf to word">
-                        <div class="tool-icon">📝</div>
+                        <div class="tool-icon">📙➡️📘</div>
                         <h4 class="tool-title" data-translate="pdfToWord">PDF to Word</h4>
                         <p class="tool-desc" data-translate="pdfToWordDesc">Convert PDF files to editable Word documents</p>
                         <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="wordToPdf" data-tool-name="Word to PDF" data-search-keywords="word to pdf, convert word to pdf">
-                        <div class="tool-icon">📄</div>
+                        <div class="tool-icon">📘➡️📙</div>
                         <h4 class="tool-title" data-translate="wordToPdf">Word to PDF</h4>
                         <p class="tool-desc" data-translate="wordToPdfDesc">Convert Word documents to PDF format</p>
                         <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="pdfToExcel" data-tool-name="PDF to Excel" data-search-keywords="pdf to excel, convert pdf to excel">
-                        <div class="tool-icon">📊</div>
+                        <div class="tool-icon">📕➡️📗</div>
                         <h4 class="tool-title" data-translate="pdfToExcel">PDF to Excel</h4>
                         <p class="tool-desc" data-translate="pdfToExcelDesc">Extract data from PDF to Excel spreadsheets</p>
                         <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="excelToPdf" data-tool-name="Excel to PDF" data-search-keywords="excel to pdf, convert excel to pdf">
-                        <div class="tool-icon">📈</div>
+                        <div class="tool-icon">📗➡️📕</div>
                         <h4 class="tool-title" data-translate="excelToPdf">Excel to PDF</h4>
                         <p class="tool-desc" data-translate="excelToPdfDesc">Convert Excel spreadsheets to PDF</p>
                         <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="pdfToPowerpoint" data-tool-name="PDF to Powerpoint" data-search-keywords="pdf to powerpoint, convert pdf to powerpoint">
-                        <div class="tool-icon">📽️</div>
+                        <div class="tool-icon">📕➡️📽️</div>
                         <h4 class="tool-title" data-translate="pdfToPowerpoint">PDF to Powerpoint</h4>
                         <p class="tool-desc" data-translate="pdfToPowerpointDesc">Convert PDF to editable Powerpoint presentations</p>
                         <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="powerpointToPdf" data-tool-name="Powerpoint to PDF" data-search-keywords="powerpoint to pdf, convert powerpoint to pdf">
-                        <div class="tool-icon">📑</div>
+                        <div class="tool-icon">📽️➡️📕</div>
                         <h4 class="tool-title" data-translate="powerpointToPdf">Powerpoint to PDF</h4>
                         <p class="tool-desc" data-translate="powerpointToPdfDesc">Convert Powerpoint presentations to PDF</p>
                         <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="pdfToJpg" data-tool-name="PDF to JPG" data-search-keywords="pdf to jpg, convert pdf to jpg">
-                        <div class="tool-icon">🖼️</div>
+                        <div class="tool-icon">📕➡️🖼️</div>
                         <h4 class="tool-title" data-translate="pdfToJpg">PDF to JPG</h4>
                         <p class="tool-desc" data-translate="pdfToJpgDesc">Convert PDF pages to JPG images</p>
                         <a href="pdf to jpg.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="jpgToPdf" data-tool-name="JPG to PDF" data-search-keywords="jpg to pdf, convert jpg to pdf">
-                        <div class="tool-icon">📄</div>
+                        <div class="tool-icon">🖼️➡️📕</div>
                         <h4 class="tool-title" data-translate="jpgToPdf">JPG to PDF</h4>
                         <p class="tool-desc" data-translate="jpgToPdfDesc">Convert JPG images to PDF documents</p>
                         <a href="jpg to pdf.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
@@ -1232,7 +1232,7 @@
                     <a href="contrast checker.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="paletteGenerator" data-tool-name="Palette Generator" data-search-keywords="palette generator, color palette">
-                    <div class="tool-icon">🎨</div>
+                    <div class="tool-icon">🧠</div>
                     <h4 class="tool-title" data-translate="paletteGenerator">Palette Generator</h4>
                     <p class="tool-desc" data-translate="paletteGeneratorDesc">Generate harmonious color palettes</p>
                     <a href="palette generator.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
