--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@
                     <a href="image-watermarker.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="imageBlurTool" data-tool-name="Image Blur Tool" data-search-keywords="image blur tool, blur image, blur effect">
-                    <div class="tool-icon">👁️</div>
+                    <div class="tool-icon">✨</div>
                     <h4 class="tool-title" data-translate="imageBlurTool">Image Blur Tool</h4>
                     <p class="tool-desc" data-translate="imageBlurToolDesc">Blur specific areas of your images</p>
                     <a href="image-blur.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
@@ -996,7 +996,7 @@
                     <a href="text sorter.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="textReverser" data-tool-name="Text Reverser" data-search-keywords="text reverser, reverse text, backwards text">
-                    <div class="tool-icon">🔄</div>
+                    <div class="tool-icon">↩️</div>
                     <h4 class="tool-title" data-translate="textReverser">Text Reverser</h4>
                     <p class="tool-desc" data-translate="textReverserDesc">Reverse the order of text characters</p>
                     <a href="text-reverser.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
@@ -1214,7 +1214,7 @@
                     <a href="color picker from image.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
                 <div class="tool-card" data-tool-id="hexToRgb" data-tool-name="HEX to RGB Converter" data-search-keywords="hex to rgb, convert hex to rgb">
-                    <div class="tool-icon">🔄</div>
+                    <div class="tool-icon">💫</div>
                     <h4 class="tool-title" data-translate="hexToRgb">HEX to RGB Converter</h4>
                     <p class="tool-desc" data-translate="hexToRgbDesc">Convert HEX color codes to RGB values</p>
                     <a href="hex to rgb converter.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
