--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
                         <a href="pdf merger splitter.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="documentConverter" data-tool-name="Document Converter" data-search-keywords="document converter, convert documents, file converter">
-                        <div class="tool-icon">🔄</div>
+                        <div class="tool-icon">📁</div>
                         <h4 class="tool-title" data-translate="documentConverter">Document Converter</h4>
                         <p class="tool-desc" data-translate="documentConverterDesc">Convert between various document formats</p>
                         <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
