--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@
             <p class="section-description" data-translate="imageDescription">Edit, convert, and optimize your images with ease</p>
             <div class="tools-grid">
                 <div class="tool-card" data-tool-id="imageConverter" data-tool-name="Image Converter" data-search-keywords="image converter, convert image, image format">
-                    <div class="tool-icon">🔄</div>
+                    <div class="tool-icon">📸</div>
                     <h4 class="tool-title" data-translate="imageConverter">Image Converter</h4>
                     <p class="tool-desc" data-translate="imageConverterDesc">Convert images between different formats</p>
                     <a href="image-converter.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
